crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '(Joe,\"von\"\"Blow\")'::fullname, E'(Joe,d\\\\\\\\Blow)'::fullname;"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    TypeCast@7..36
      AConst@7..26
        Sconst@7..26 "'(Joe,\"von\"\"Blow\")'"
      Typecast@26..28 "::"
      TypeName@28..36
        Ident@28..36 "fullname"
  Ascii44@36..37 ","
  Whitespace@37..38 " "
  ResTarget@38..66
    TypeCast@38..66
      AConst@38..56
        Sconst@38..56 "E'(Joe,d\\\\\\\\Blow)'"
      Typecast@56..58 "::"
      TypeName@58..66
        Ident@58..66 "fullname"
  Ascii59@66..67 ";"

