crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from int8_tbl i8\nwhere i8 in (row(123,456)::int8_tbl, '(4567890123456789,123)');"
---
SelectStmt@0..89
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..25
    Ident@14..22 "int8_tbl"
    Whitespace@22..23 " "
    Alias@23..25
      Ident@23..25 "i8"
  Newline@25..26 "\n"
  Where@26..31 "where"
  Whitespace@31..32 " "
  AExpr@32..87
    ColumnRef@32..34
      Ident@32..34 "i8"
    Whitespace@34..35 " "
    InP@35..37 "in"
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    List@39..87
      TypeCast@39..61
        RowExpr@39..50
          Row@39..42 "row"
          Ascii40@42..43 "("
          AConst@43..46
            Iconst@43..46 "123"
          Ascii44@46..47 ","
          AConst@47..50
            Iconst@47..50 "456"
        Ascii41@50..51 ")"
        Typecast@51..53 "::"
        TypeName@53..61
          Ident@53..61 "int8_tbl"
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      AConst@63..87
        Sconst@63..87 "'(4567890123456789,123)'"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

