crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (row(1, 2.0)).f2;"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    AIndirection@7..23
      Ascii40@7..8 "("
      RowExpr@8..18
        Row@8..11 "row"
        Ascii40@11..12 "("
        AConst@12..13
          Iconst@12..13 "1"
        Ascii44@13..14 ","
        Whitespace@14..15 " "
        AConst@15..18
          Fconst@15..18 "2.0"
      Ascii41@18..19 ")"
      Ascii41@19..20 ")"
      Ascii46@20..21 "."
      Ident@21..23 "f2"
  Ascii59@23..24 ";"

