crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (r).f1 from (select row(1, 2.0) as r) ss;"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..13
    AIndirection@7..13
      Ascii40@7..8 "("
      ColumnRef@8..9
        Ident@8..9 "r"
      Ascii41@9..10 ")"
      Ascii46@10..11 "."
      Ident@11..13 "f1"
  Whitespace@13..14 " "
  From@14..18 "from"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  RangeSubselect@20..47
    SelectStmt@20..43
      Select@20..26 "select"
      Whitespace@26..27 " "
      ResTarget@27..43
        RowExpr@27..37
          Row@27..30 "row"
          Ascii40@30..31 "("
          AConst@31..32
            Iconst@31..32 "1"
          Ascii44@32..33 ","
          Whitespace@33..34 " "
          AConst@34..37
            Fconst@34..37 "2.0"
        Ascii41@37..38 ")"
        Whitespace@38..39 " "
        As@39..41 "as"
        Whitespace@41..42 " "
        Ident@42..43 "r"
    Ascii41@43..44 ")"
    Whitespace@44..45 " "
    Alias@45..47
      Ident@45..47 "ss"
  Ascii59@47..48 ";"

