crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '(Joe,\"Blow,Jr\")'::fullname;"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      AConst@7..24
        Sconst@7..24 "'(Joe,\"Blow,Jr\")'"
      Typecast@24..26 "::"
      TypeName@26..34
        Ident@26..34 "fullname"
  Ascii59@34..35 ";"

