crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select ROW() = ROW();
---
SelectStmt@0..21
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..18
    AExpr@7..18
      RowExpr@7..10
        Row@7..10 "ROW"
      Ascii40@10..11 "("
      Ascii41@11..12 ")"
      Whitespace@12..13 " "
      Ascii61@13..14 "="
      Whitespace@14..15 " "
      RowExpr@15..18
        Row@15..18 "ROW"
  Ascii40@18..19 "("
  Ascii41@19..20 ")"
  Ascii59@20..21 ";"

