crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@86.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1,1.1) = any (array[ row(7,7.7), row(1,1.0), row(0,0.0) ]);"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      RowExpr@7..16
        Row@7..10 "row"
        Ascii40@10..11 "("
        AConst@11..12
          Iconst@11..12 "1"
        Ascii44@12..13 ","
        AConst@13..16
          Fconst@13..16 "1.1"
      Ascii41@16..17 ")"
      Whitespace@17..18 " "
      Ascii61@18..19 "="
      Whitespace@19..20 " "
      Any@20..23 "any"
      Whitespace@23..24 " "
      Ascii40@24..25 "("
      AArrayExpr@25..65
        Array@25..30 "array"
        Ascii91@30..31 "["
        Whitespace@31..32 " "
        RowExpr@32..41
          Row@32..35 "row"
          Ascii40@35..36 "("
          AConst@36..37
            Iconst@36..37 "7"
          Ascii44@37..38 ","
          AConst@38..41
            Fconst@38..41 "7.7"
        Ascii41@41..42 ")"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        RowExpr@44..53
          Row@44..47 "row"
          Ascii40@47..48 "("
          AConst@48..49
            Iconst@48..49 "1"
          Ascii44@49..50 ","
          AConst@50..53
            Fconst@50..53 "1.0"
        Ascii41@53..54 ")"
        Ascii44@54..55 ","
        Whitespace@55..56 " "
        RowExpr@56..65
          Row@56..59 "row"
          Ascii40@59..60 "("
          AConst@60..61
            Iconst@60..61 "0"
          Ascii44@61..62 ","
          AConst@62..65
            Fconst@62..65 "0.0"
  Ascii41@65..66 ")"
  Whitespace@66..67 " "
  Ascii93@67..68 "]"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

